--- a/helm-webapp/templates/deployment.yml
+++ b/helm-webapp/templates/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.appName }}-deployment
-  namespace: default
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.appName }}
     type: frontend
