--- a/helm-webapp/templates/service.yml
+++ b/helm-webapp/templates/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: asian-food-service
-  namespace: default
+  namespace: {{ .Values.namespace }}
 spec:
   type: NodePort
   selector:
