--- a/helm-webapp/templates/deployment.yml
+++ b/helm-webapp/templates/deployment.yml
@@ -20,6 +20,6 @@ spec:
     spec:
       containers:
         - name: asian-food-container
-          image: cheulong/asian-food-web-prod
+          image: cheulong/{{ .Values.appName}}:{{ .Values.imageTag }}
           ports:
             - containerPort: 80
